--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -37,47 +37,11 @@
   }
 }
 
-body {
-  font-family: "nanumsquare";
-}
-.black-nav {
-  background-color: black;
-  width: 100%;
-  display: flex;
+.jumbotron {
+  background-image: url('./background.jpg');
+  background-size: cover;
   color: white;
-  padding: 20px;
-  font-weight: 600;
-  font-size: 20px;
-}
-
-.list {
-  margin-top: 30px;
-  text-align: left;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
-.modal {
-  margin-top: 20px;
-  padding: 20px;
-  background: #eee;
-}
-
-.publish {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.publish input {
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  width: 80%;
-  border: 1px solid grey;
-}
-
-.publish button {
-  display: block;
-  margin: auto;
-  margin-top: 10px;
+  background-color: gainsboro;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
