--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -37,11 +37,9 @@
   }
 }
 
-body {
-  font-family: "nanumsquare";
-}
+
 .black-nav {
-  background-color: black;
+  background: black;
   width: 100%;
   display: flex;
   color: white;
@@ -61,23 +59,4 @@ body {
   margin-top: 20px;
   padding: 20px;
   background: #eee;
-}
-
-.publish {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.publish input {
-  padding: 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  width: 80%;
-  border: 1px solid grey;
-}
-
-.publish button {
-  display: block;
-  margin: auto;
-  margin-top: 10px;
 }
