--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -1,3 +1,9 @@
+.main-bg {
+  height : 300px;
+  background-image: url('./img/bg.png');
+  background-size: cover;
+}
+
 .App {
   text-align: center;
 }
@@ -35,14 +41,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.jumbotron {
-  background-image: url('./background.jpeg');
-  background-size: cover;
-  padding: 40px;
-}
-
-#product {
-  border: 1px solid #eee;
 }
