--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -1,3 +1,12 @@
+.start {
+  transfrom: scale(0);
+}
+
+.end {
+  transform: scale(1);
+  transition: all 10s;
+}
+
 .main-bg {
   height : 300px;
   background-image: url('./img/bg.png');
